--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,19 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.lamp-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%; /* Menggunakan 100% tinggi viewport */
+  background-color: #f0f0f0; /* Optional background color */
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.lamp-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 10rem;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+ion-icon {
+  width: 40rem;
+  height: 40rem;
 }
